@@ -31,8 +31,7 @@
 #   pgl blocks connections from and to hosts, that are listed in a very large
 #   blocklist. The blocklist can be in one of the following formats: eMule
 #   "ipfilter.dat", "peerguardian .p2p text" or "peerguardian .p2b v2 binary".
-#   pgl uses the netfilter xt_NFQUEUE kernel module (available since kernel
-#   2.6.13).
+#   pgl uses the netfilter xt_NFQUEUE kernel module.
 ### END INIT INFO
 
 ################################################################################
