@@ -215,7 +215,7 @@ IPTABLES_FWD="pgl_fwd"
 IPTABLES_ACTIVATION="1"
 
 # Set the iptables target for sending traffic to userspace.
-# NFQUEUE - available since kernel version 2.6.13
+# NFQUEUE - available since Linux kernel version 2.6.13
 # QUEUE   - (deprecated)
 IPTABLES_TARGET="NFQUEUE"
 
@@ -224,8 +224,9 @@ IPTABLES_TARGET="NFQUEUE"
 NFQUEUE_NUMBER="92"
 
 # Set kernel queue maximum length.
+# Available since Linux kernel version 2.6.20.
 # Sets the size of the queue in kernel. This fixes the maximum number of packets
-# the kernel will store before internally before dropping upcoming packets.
+# the kernel will store internally before dropping upcoming packets.
 # Use this if you get ENOBUFS errors in the pgld.log.
 # Valid range: 1 - 4294967295
 # If the value is not in the valid range this option will be ignored and the
